--- a/motivation.tex
+++ b/motivation.tex
@@ -105,7 +105,12 @@ However, abstract categorial grammars are quite young and no significant
 grammar has been developed under this framework. To facilitate the
 creation of such a grammar, we will borrow heavily from the Frigram
 Interaction Grammar \cite{perrier2007french} and its linguistic
-resources.
+resources. Namely, we will rely on the fact that Frigram is defined
+separately from its lexicon, Frilex, which we will use in its
+entirety. Frigram, the grammar itself, can also serve us as a guideline
+when designing our own grammar thanks to the close ties between the
+formalisms of interaction grammars and abstract categorial grammars
+\cite{perrier1999intuitionistic}.
 
 Finally, our work will be supported by the existence of a corpus
 annotated with the rhetorical relations of SDRT, the Annodis corpus
