Wrote up the exposition on IGs

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,8 @@
 \documentclass{article}
 
 %% \usepackage{sdrt}
+\usepackage{xcolor}
+\usepackage{graphicx}
 \usepackage{gb4e}
 \usepackage{bussproofs}
 
@@ -19,6 +21,8 @@
 \input{motivation}
 
 \input{acg}
+
+\input{ig}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
