Wrote about negation in Frigram

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{gb4e}
 \usepackage{bussproofs}
+\usepackage{hyperref}
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
