--- a/motivation.tex
+++ b/motivation.tex
@@ -51,7 +51,7 @@ way to make this kind of decisions.
 
 The discourse in (\ref{salmon}) and its structure in (TODO) demonstrate
 another feature of discourse structures. First off, seeing the
-hiearchical structure of the discourse gives us important information
+hierarchical structure of the discourse gives us important information
 about the granularity of the descriptions given in the individual
 propositions, information that could be useful for performing tasks such
 as text summarization.
